--- a/app/src/main/res/layout/card_cust_service2.xml
+++ b/app/src/main/res/layout/card_cust_service2.xml
@@ -54,11 +54,11 @@
                     android:id="@+id/text_1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:maxLength="22"
                     android:text="From"
                     android:textColor="#676464"
-                    android:visibility="visible"
-                    android:maxLength="22"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold"
+                    android:visibility="visible" />
 
                 <TextView
                     android:id="@+id/text_2"
