--- a/app/src/main/res/layout/edit_post_everything.xml
+++ b/app/src/main/res/layout/edit_post_everything.xml
@@ -103,6 +103,55 @@
                 android:elevation="60dp"
                 android:orientation="vertical">
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:elevation="60dp"
+                    android:orientation="vertical">
+
+                    <TextView android:text="Jenis Post :"
+                        android:layout_marginTop="5dp"
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content" />
+
+                    <Spinner
+                        android:id="@+id/spinner_jenis_post"
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:drawSelectorOnTop="true"
+                        android:entries="@array/slc_post_eveything"
+                        android:minHeight="48dp" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:elevation="60dp"
+                    android:orientation="vertical">
+
+                    <TableLayout
+                        android:id="@+id/table_pertanyaan"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginLeft="5dp"
+                        android:layout_marginRight="5dp"
+                        android:layout_marginTop="5dp"
+                        android:gravity="top"
+                        android:stretchColumns="1,2,3">
+                    </TableLayout>
+
+                </LinearLayout>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginTop="@dimen/spacing_middle"
+                    android:background="@color/grey_5" />
+
                 <EditText
                     android:id="@+id/txt_post"
                     android:layout_width="match_parent"
